@@ -4,7 +4,6 @@ import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.apache.commons.io.FileUtils;
 import org.springframework.beans.factory.annotation.Value;
@@ -27,14 +26,14 @@ public class FileServiceImpl extends BaseService implements FileService {
 
 	@Override
 	public void saveFile(MultipartFile srcFile, String folder, String fileName) throws IOException {
-		File destFile = Paths.get(homeDirectory).resolve(folder).resolve(fileName).toFile();
+		File destFile = Path.of(homeDirectory).resolve(folder).resolve(fileName).toFile();
 		FileUtils.writeByteArrayToFile(destFile, srcFile.getBytes());
 	}
 
 	@Override
 	public Resource loadFile(String filePath) {
 		try {
-			Path file = Paths.get(homeDirectory).resolve(filePath);
+			Path file = Path.of(homeDirectory).resolve(filePath);
 
 			Resource resource = new UrlResource(file.toUri());
 			if (resource.exists() || resource.isReadable()) {
